2009-10-19	The InnoDB Team

	* mysql-test/innodb_information_schema.test:
	Fix Bug#47808 innodb_information_schema.test fails when run under
	valgrind

2009-10-15	The InnoDB Team

	* include/page0page.ic:
	Fix Bug#47058 Failure to compile innodb_plugin on solaris 10u7 + spro
	cc/CC 5.10

2009-10-01	The InnoDB Team

	* fsp/fsp0fsp.c, row/row0merge.c:
	Clean up after a crash during DROP INDEX.  When InnoDB crashes
	while dropping an index, ensure that the index will be completely
	dropped during crash recovery.  The MySQL .frm file may still
	contain the dropped index, but there is little that we can do
	about it.

2009-09-28	The InnoDB Team

	* handler/ha_innodb.cc:
	When a secondary index exists in the MySQL .frm file but not in
	the InnoDB data dictionary, return an error instead of letting an
	assertion fail in index_read.

2009-09-28	The InnoDB Team

	* btr/btr0btr.c, buf/buf0buf.c, include/page0page.h,
	include/page0zip.h, page/page0cur.c, page/page0page.c,
	page/page0zip.c:
	Do not write to PAGE_INDEX_ID when restoring an uncompressed page
	after a compression failure.  The field should only be written
	when creating a B-tree page.  This fix addresses a race condition
	in a debug assertion.

2009-09-28	The InnoDB Team

	* fil/fil0fil.c:
	Try to prevent the reuse of tablespace identifiers after InnoDB
	has crashed during table creation.  Also, refuse to start if files
	with duplicate tablespace identifiers are encountered.

2009-09-25	The InnoDB Team

	* include/os0file.h, os/os0file.c:
	Fix Bug#47055 unconditional exit(1) on ERROR_WORKING_SET_QUOTA
	1453 (0x5AD) for InnoDB backend

2009-09-19	The InnoDB Team

	* handler/ha_innodb.cc, mysql-test/innodb-consistent-master.opt,
	mysql-test/innodb-consistent.result,
	mysql-test/innodb-consistent.test:
	Fix Bug#37232 Innodb might get too many read locks for DML with
	repeatable-read

2009-09-19	The InnoDB Team

	* fsp/fsp0fsp.c:
	Fix Bug#31183 Tablespace full problems not reported in error log,